Primeira versão do Banco de dados

--- a/QuickBuy.Repositorio/QuickBuy.Repositorio.csproj
+++ b/QuickBuy.Repositorio/QuickBuy.Repositorio.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190828215724_PrimeiraVersaoDaBase.cs" />
+    <Compile Remove="Migrations\20190828215724_PrimeiraVersaoDaBase.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
   </ItemGroup>
