--- a/QuickBuy.Web/ClientApp/package.json
+++ b/QuickBuy.Web/ClientApp/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "6.1.10",
     "@angular/common": "6.1.10",
     "@angular/compiler": "6.1.10",
@@ -33,6 +32,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "6.1.10",
     "@angular/language-service": "^6.0.0",
