--- a/QuickBuy.Web/ClientApp/tsconfig.json
+++ b/QuickBuy.Web/ClientApp/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -16,6 +16,7 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "charset": "utf8"
   }
 }
