Cadastro de produto - Gravando o produto no banco de dados

--- a/QuickBuy.Web/QuickBuy.Web.csproj
+++ b/QuickBuy.Web/QuickBuy.Web.csproj
@@ -56,6 +56,10 @@
     <TypeScriptCompile Include="ClientApp\src\app\usuario\login\login.component.ts" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\arquivos\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
